# egsa87

./: .gitignore  CMakeLists.txt  README.md  TODO.md  mainwindow.cpp
gui-qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt  egsa87.cpp  egsa87.h  egsa87_test.cpp
src/: CMakeLists.txt  TODO.md  egsa87.c  egsa87.cpp  egsa87.h  egsa87_test.c  egsa87_test.cpp  mainwindow.h
